--- a/planilha.html
+++ b/planilha.html
@@ -3,24 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pesquisa Cervejaria Salva - Protótipo</title>
+  <title>Pesquisa Cervejaria Salva - Protótipo Profissional</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body { font-family:'Poppins',sans-serif; margin:0; padding:0; background:#f4f4f9; color:#333; }
-    header { background:#6a1b9a; color:white; padding:15px; text-align:center; font-size:20px; font-weight:600; }
-    main { padding:20px; max-width:700px; margin:auto; }
+    header { background:#6a1b9a; color:white; padding:15px; text-align:center; font-size:22px; font-weight:600; }
+    main { padding:20px; max-width:900px; margin:auto; }
     form { background:white; padding:20px; border-radius:8px; box-shadow:0 4px 8px rgba(0,0,0,.1); margin-bottom:20px; }
     h3 { color:#6a1b9a; }
     label { font-weight:600; margin-top:10px; display:block; }
-    input, textarea { width:100%; padding:10px; margin:6px 0; border:1px solid #ccc; border-radius:6px; font-size:15px; }
-    button { background:#6a1b9a; color:white; border:none; padding:12px; width:100%; border-radius:6px; font-size:16px; cursor:pointer; margin-top:10px; }
+    input { width:100%; padding:10px; margin:6px 0; border:1px solid #ccc; border-radius:6px; font-size:15px; }
+    button { background:#6a1b9a; color:white; border:none; padding:12px; border-radius:6px; font-size:16px; cursor:pointer; margin-top:10px; }
     button:hover { background:#4a148c; }
-    .card { background:white; margin:10px 0; padding:12px; border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,.08); }
-    .produtos { display:grid; grid-template-columns:1fr 1fr; gap:15px; }
+    .actions { display:flex; gap:10px; margin:10px 0; }
+    table { width:100%; border-collapse:collapse; margin-top:15px; background:white; box-shadow:0 2px 6px rgba(0,0,0,.08); border-radius:6px; overflow:hidden; }
+    th, td { border:1px solid #ddd; padding:10px; text-align:center; font-size:14px; }
+    th { background:#6a1b9a; color:white; position:sticky; top:0; }
+    tr:nth-child(even) { background:#f9f9f9; }
   </style>
 </head>
 <body>
-  <header>🍺 Pesquisa Cervejaria Salva (Protótipo)</header>
+  <header>🍺 Pesquisa Cervejaria Salva (Protótipo Profissional)</header>
 
   <main>
     <form id="pesquisaForm">
@@ -35,52 +38,64 @@
       <input type="date" id="validade" required>
 
       <h3>Preços dos Produtos</h3>
-      <div class="produtos">
-        <div>
-          <label for="malzbier">Malzbier (R$)</label>
-          <input type="number" id="malzbier" step="0.01" required>
-        </div>
-        <div>
-          <label for="bairrista">Bairrista (R$)</label>
-          <input type="number" id="bairrista" step="0.01" required>
-        </div>
-        <div>
-          <label for="session">Session IPA (R$)</label>
-          <input type="number" id="session" step="0.01" required>
-        </div>
-        <div>
-          <label for="pilsen">Salva Pilsen (R$)</label>
-          <input type="number" id="pilsen" step="0.01" required>
-        </div>
-      </div>
+      <label for="malzbier">Malzbier (R$)</label>
+      <input type="number" id="malzbier" step="0.01" required>
+
+      <label for="bairrista">Bairrista (R$)</label>
+      <input type="number" id="bairrista" step="0.01" required>
+
+      <label for="session">Session IPA (R$)</label>
+      <input type="number" id="session" step="0.01" required>
+
+      <label for="pilsen">Salva Pilsen (R$)</label>
+      <input type="number" id="pilsen" step="0.01" required>
 
       <button type="submit">Enviar Resposta</button>
     </form>
 
-    <h3>📋 Respostas Registradas</h3>
-    <div id="respostas"></div>
+    <div class="actions">
+      <button onclick="exportarCSV()">⬇️ Exportar CSV</button>
+    </div>
+
+    <h3>📊 Respostas em Tempo Real</h3>
+    <div style="overflow-x:auto;">
+      <table id="tabelaRespostas">
+        <thead>
+          <tr>
+            <th>Loja</th>
+            <th>Estoque</th>
+            <th>Validade</th>
+            <th>Malzbier</th>
+            <th>Bairrista</th>
+            <th>Session IPA</th>
+            <th>Pilsen</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </div>
   </main>
 
   <script>
     const form = document.getElementById("pesquisaForm");
-    const respostasDiv = document.getElementById("respostas");
+    const tbody = document.querySelector("#tabelaRespostas tbody");
 
     // Carregar respostas do localStorage
     function carregarRespostas(){
       const dados = JSON.parse(localStorage.getItem("pesquisaSalva")) || [];
-      respostasDiv.innerHTML = "";
+      tbody.innerHTML = "";
       dados.forEach(d => {
-        respostasDiv.innerHTML += `
-          <div class="card">
-            <b>Loja:</b> ${d.loja} <br>
-            <b>Estoque:</b> ${d.estoque} <br>
-            <b>Validade:</b> ${d.validade} <br><hr>
-            <b>Malzbier:</b> R$ ${parseFloat(d.malzbier).toFixed(2)} <br>
-            <b>Bairrista:</b> R$ ${parseFloat(d.bairrista).toFixed(2)} <br>
-            <b>Session IPA:</b> R$ ${parseFloat(d.session).toFixed(2)} <br>
-            <b>Salva Pilsen:</b> R$ ${parseFloat(d.pilsen).toFixed(2)}
-          </div>
+        const tr = document.createElement("tr");
+        tr.innerHTML = `
+          <td>${d.loja}</td>
+          <td>${d.estoque}</td>
+          <td>${d.validade}</td>
+          <td>R$ ${parseFloat(d.malzbier).toFixed(2)}</td>
+          <td>R$ ${parseFloat(d.bairrista).toFixed(2)}</td>
+          <td>R$ ${parseFloat(d.session).toFixed(2)}</td>
+          <td>R$ ${parseFloat(d.pilsen).toFixed(2)}</td>
         `;
+        tbody.appendChild(tr);
       });
     }
 
@@ -105,6 +120,26 @@
       form.reset();
       carregarRespostas();
     });
+
+    // Atualização em tempo real simulada
+    setInterval(carregarRespostas, 2000);
+
+    // Exportar dados para CSV
+    function exportarCSV(){
+      const dados = JSON.parse(localStorage.getItem("pesquisaSalva")) || [];
+      if(dados.length === 0){ alert("Nenhum dado para exportar."); return; }
+
+      let csv = "Loja,Estoque,Validade,Malzbier,Bairrista,Session IPA,Pilsen\n";
+      dados.forEach(d=>{
+        csv += `${d.loja},${d.estoque},${d.validade},${d.malzbier},${d.bairrista},${d.session},${d.pilsen}\n`;
+      });
+
+      const blob = new Blob([csv], {type:"text/csv"});
+      const link = document.createElement("a");
+      link.href = URL.createObjectURL(blob);
+      link.download = "pesquisa_salva.csv";
+      link.click();
+    }
 
     carregarRespostas();
   </script>
