--- a/delivery.html
+++ b/delivery.html
@@ -3,106 +3,95 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Planilha Inteligente - Estilo Excel</title>
+  <title>Planilha Inteligente - Excel + Dashboards</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <style>
     body { font-family:'Poppins',sans-serif; background:#0f0f0f; color:#fff; margin:0; }
-    header { background:linear-gradient(90deg,#6a1b9a,#8e24aa,#d81b60); padding:20px; text-align:center; font-size:22px; font-weight:600; }
+    header { background:linear-gradient(90deg,#6a1b9a,#8e24aa,#d81b60); padding:15px; text-align:center; font-size:20px; font-weight:600; }
+    nav { display:flex; justify-content:center; gap:15px; background:#1e1e2f; padding:10px; }
+    nav button { background:#8e24aa; border:none; padding:10px 20px; border-radius:6px; color:#fff; cursor:pointer; font-weight:600; }
+    nav button.active { background:#d81b60; }
+    nav button:hover { opacity:.9; }
 
-    /* Layout principal */
-    main {
-      display: grid;
-      grid-template-columns: 1fr 1fr; /* Planilha | Gráficos */
-      gap: 20px;
-      padding: 20px;
-      max-width: 1400px;
-      margin: auto;
-    }
-
-    .controls { grid-column: 1 / -1; display:flex; gap:10px; flex-wrap:wrap; margin-bottom:10px; }
-    button { padding:10px; border-radius:6px; border:none; font-size:14px; background:#8e24aa; color:#fff; cursor:pointer; }
-    button:hover { background:#d81b60; }
+    main { padding:20px; max-width:1400px; margin:auto; }
+    .hidden { display:none; }
 
     /* Planilha */
-    .sheet {
-      background: #1e1e2f;
-      padding: 10px;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0,0,0,.4);
-      overflow: auto;
-      max-height: 500px; /* Planilha rola sem empurrar gráficos */
-    }
-    table { border-collapse:collapse; min-width:100%; }
+    .sheet { background:#1e1e2f; padding:10px; border-radius:12px; box-shadow:0 4px 10px rgba(0,0,0,.4); overflow:auto; }
+    table { border-collapse:collapse; width:100%; min-width:600px; }
     th, td { border:1px solid #444; padding:6px; text-align:center; min-width:80px; }
-    th { background:#2c2c3c; color:#fff; position:sticky; top:0; z-index:2; }
-    .rowHeader { background:#2c2c3c; color:#fff; position:sticky; left:0; z-index:1; }
+    th { background:#2c2c3c; position:sticky; top:0; }
+    .rowHeader { background:#2c2c3c; }
     td[contenteditable="true"] { background:#1e1e2f; outline:none; }
 
-    /* Dashboards */
-    .dashboards {
-      display: grid;
-      grid-template-rows: repeat(3, 1fr);
-      gap: 20px;
-    }
-    .dashboards canvas {
-      background: #121212;
-      border-radius: 12px;
-      padding: 10px;
-      width: 100% !important;
-      height: 100% !important;
-    }
+    .controls { margin:15px 0; display:flex; gap:10px; flex-wrap:wrap; }
+    .controls button { padding:10px; border-radius:6px; border:none; font-size:14px; background:#8e24aa; color:#fff; cursor:pointer; }
+    .controls button:hover { background:#d81b60; }
 
-    /* Responsividade */
-    @media(max-width: 900px) {
-      main { grid-template-columns: 1fr; }
-      .controls { justify-content:center; }
-      .dashboards { grid-template-columns: 1fr; grid-template-rows: auto; }
+    /* Dashboards */
+    .dashboards { display:grid; grid-template-columns:1fr 1fr; gap:20px; }
+    .dashboards canvas { background:#121212; border-radius:12px; padding:10px; }
+    @media(max-width: 900px){
+      .dashboards { grid-template-columns:1fr; }
     }
   </style>
 </head>
 <body>
-  <header>📊 Planilha Inteligente - Estilo Excel</header>
+  <header>📊 Planilha Inteligente - Excel + Dashboards</header>
+  <nav>
+    <button id="btnPlanilha" class="active" onclick="mostrarTela('planilha')">📝 Planilha</button>
+    <button id="btnDashboards" onclick="mostrarTela('dashboards')">📈 Dashboards</button>
+  </nav>
+
   <main>
-    <div class="controls">
-      <button onclick="adicionarLinha()">➕ Adicionar Linha</button>
-      <button onclick="adicionarColuna()">➕ Adicionar Coluna</button>
-      <button onclick="exportarCSV()">⬇️ Exportar CSV</button>
-      <button onclick="exportarPDF()">📄 Exportar PDF</button>
-    </div>
+    <!-- TELA PLANILHA -->
+    <section id="telaPlanilha">
+      <div class="controls">
+        <button onclick="adicionarLinha()">➕ Adicionar Linha</button>
+        <button onclick="adicionarColuna()">➕ Adicionar Coluna</button>
+      </div>
+      <div class="sheet">
+        <table id="tabela">
+          <thead>
+            <tr id="cabecalho">
+              <th></th><th>A</th><th>B</th><th>C</th>
+            </tr>
+          </thead>
+          <tbody id="corpo">
+            <tr><td class="rowHeader">1</td><td contenteditable="true">Nome</td><td contenteditable="true">Telefone</td><td contenteditable="true">Endereço</td></tr>
+            <tr><td class="rowHeader">2</td><td contenteditable="true">10</td><td contenteditable="true">20</td><td contenteditable="true">30</td></tr>
+            <tr><td class="rowHeader">3</td><td contenteditable="true">15</td><td contenteditable="true">25</td><td contenteditable="true">40</td></tr>
+          </tbody>
+        </table>
+      </div>
+    </section>
 
-    <!-- Planilha -->
-    <div class="sheet">
-      <table id="tabela">
-        <thead>
-          <tr id="cabecalho">
-            <th></th>
-            <th>A</th>
-            <th>B</th>
-            <th>C</th>
-          </tr>
-        </thead>
-        <tbody id="corpo">
-          <tr><td class="rowHeader">1</td><td contenteditable="true">Categoria</td><td contenteditable="true">Telefone</td><td contenteditable="true">Endereço</td></tr>
-          <tr><td class="rowHeader">2</td><td contenteditable="true">10</td><td contenteditable="true">20</td><td contenteditable="true">30</td></tr>
-          <tr><td class="rowHeader">3</td><td contenteditable="true">15</td><td contenteditable="true">25</td><td contenteditable="true">40</td></tr>
-        </tbody>
-      </table>
-    </div>
-
-    <!-- Dashboards -->
-    <div class="dashboards">
-      <canvas id="graficoLinha" height="200"></canvas>
-      <canvas id="graficoBarra" height="200"></canvas>
-      <canvas id="graficoPizza" height="200"></canvas>
-    </div>
+    <!-- TELA DASHBOARDS -->
+    <section id="telaDashboards" class="hidden">
+      <div class="dashboards">
+        <canvas id="graficoLinha"></canvas>
+        <canvas id="graficoBarra"></canvas>
+        <canvas id="graficoPizza"></canvas>
+      </div>
+    </section>
   </main>
 
   <script>
     const tabela=document.getElementById("tabela");
     const corpo=document.getElementById("corpo");
     const cabecalho=document.getElementById("cabecalho");
+
+    // Navegação entre telas
+    function mostrarTela(tela){
+      document.getElementById("telaPlanilha").classList.add("hidden");
+      document.getElementById("telaDashboards").classList.add("hidden");
+      document.getElementById("btnPlanilha").classList.remove("active");
+      document.getElementById("btnDashboards").classList.remove("active");
+
+      if(tela==="planilha"){ document.getElementById("telaPlanilha").classList.remove("hidden"); document.getElementById("btnPlanilha").classList.add("active"); }
+      else { document.getElementById("telaDashboards").classList.remove("hidden"); document.getElementById("btnDashboards").classList.add("active"); atualizarGraficos(); }
+    }
 
     // Gráficos
     const ctxLinha=document.getElementById("graficoLinha").getContext("2d");
@@ -119,22 +108,17 @@
 
       const categorias=Array.from(rows[0].cells).slice(1).map(c=>c.innerText.trim());
       const valores=rows.slice(1).map(r=>Array.from(r.cells).slice(1).map(c=>parseFloat(c.innerText)||0));
-
       const soma=categorias.map((_,colIdx)=>valores.reduce((acc,row)=>acc+(row[colIdx]||0),0));
 
       graficoLinha.data.labels=rows.slice(1).map(r=>r.cells[0].innerText);
       graficoLinha.data.datasets=categorias.map((cat,idx)=>({
-        label:cat||`Coluna ${idx+1}`,
-        data:valores.map(v=>v[idx]||0),
-        borderColor:getCor(idx),
-        backgroundColor:"transparent"
+        label:cat||`Coluna ${idx+1}`, data:valores.map(v=>v[idx]||0),
+        borderColor:getCor(idx), backgroundColor:"transparent"
       }));
 
       graficoBarra.data.labels=graficoLinha.data.labels;
       graficoBarra.data.datasets=categorias.map((cat,idx)=>({
-        label:cat||`Coluna ${idx+1}`,
-        data:valores.map(v=>v[idx]||0),
-        backgroundColor:getCor(idx)
+        label:cat||`Coluna ${idx+1}`, data:valores.map(v=>v[idx]||0), backgroundColor:getCor(idx)
       }));
 
       graficoPizza.data.labels=categorias;
@@ -151,50 +135,20 @@
       tdHeader.className="rowHeader"; tdHeader.innerText=rowCount;
       tr.appendChild(tdHeader);
       for(let i=1;i<cabecalho.cells.length;i++){
-        const td=document.createElement("td"); td.contentEditable="true";
-        tr.appendChild(td);
+        const td=document.createElement("td"); td.contentEditable="true"; tr.appendChild(td);
       }
       corpo.appendChild(tr);
     }
 
     function adicionarColuna(){
       const colCount=cabecalho.cells.length;
-      const th=document.createElement("th");
-      th.innerText=String.fromCharCode(64+colCount);
-      cabecalho.appendChild(th);
-      for(let i=0;i<corpo.rows.length;i++){
-        const td=document.createElement("td"); td.contentEditable="true";
-        corpo.rows[i].appendChild(td);
-      }
+      const th=document.createElement("th"); th.innerText=String.fromCharCode(64+colCount); cabecalho.appendChild(th);
+      for(let i=0;i<corpo.rows.length;i++){ const td=document.createElement("td"); td.contentEditable="true"; corpo.rows[i].appendChild(td); }
     }
 
     function getCor(i){const cores=["#8e24aa","#d81b60","#ffb74d","#29b6f6","#43a047","#f44336","#3f51b5"]; return cores[i%cores.length];}
 
-    function exportarCSV(){
-      let csv="";
-      for(let r of tabela.rows){
-        let linha=Array.from(r.cells).map(c=>c.innerText.trim()).join(",");
-        csv+=linha+"\n";
-      }
-      const blob=new Blob([csv],{type:"text/csv"});
-      const link=document.createElement("a"); link.href=URL.createObjectURL(blob);
-      link.download="planilha_inteligente.csv"; link.click();
-    }
-
-    async function exportarPDF(){
-      const {jsPDF}=window.jspdf;
-      const doc=new jsPDF(); doc.setFontSize(16);
-      doc.text("📊 Relatório - Planilha Inteligente",20,20);
-      let y=40;
-      for(let r of corpo.rows){
-        let linha=Array.from(r.cells).map(c=>c.innerText).join(" | ");
-        doc.text(linha,20,y); y+=10;
-      }
-      doc.save("planilha_inteligente.pdf");
-    }
-
-    tabela.addEventListener("input",atualizarGraficos);
-    atualizarGraficos();
+    tabela.addEventListener("input",()=>{ if(document.getElementById("telaDashboards").classList.contains("hidden")===false) atualizarGraficos(); });
   </script>
 </body>
 </html>
